Teste com players do youtube e livestream

--- a/src/pages/ao-vivo/ao-vivo.html
+++ b/src/pages/ao-vivo/ao-vivo.html
@@ -9,7 +9,8 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page1">
-    <iframe width="280" height="160" 
-    src="http://cdn.livestream.com/embed/tvmaisaovivo?layout=4&color=0xe7e7e7&autoPlay=true&mute=false&iconColorOver=0x888888&iconColor=0x777777&allowchat=true&height=193&width=300" 
-    style="border:0;outline:0" frameborder="0" scrolling="no"></iframe>
+  <h1>Youtube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/lR6kBDdvFIU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <h1>Livestream</h1>
+    <iframe id="ls_embed_1516367984" src="https://livestream.com/accounts/16936513/events/4684424/player?width=560&height=315&enableInfoAndActivity=false&defaultDrawer=&autoPlay=true&mute=false" width="560" height="315" frameborder="0" scrolling="no" allowfullscreen> </iframe>
 </ion-content>
