Alterações nas páginas e no design

--- a/src/pages/contato/contato.html
+++ b/src/pages/contato/contato.html
@@ -8,4 +8,62 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page5"></ion-content>
+<ion-content>
+
+  <div id="profile-bg">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3981.2911953730236!2d-38.499102!3d-3.7466210000000006!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7489113e3ba97%3A0xde7830f4458db8d6!2sAv.+Ant%C3%B4nio+Sales%2C+2772+-+Dion%C3%ADsio+Torres%2C+Fortaleza+-+CE%2C+60135-102!5e0!3m2!1spt-BR!2sbr!4v1521323122666" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+
+  <div id="content">
+  
+    <ion-card>
+
+      <ion-card-content>
+        <ion-card-title>
+          Informações de Contato:
+        </ion-card-title>
+        <h2>Endereço: AV. Antônio Sales, 2772 - Dionísio Torres. Fortaleza, CE</h2>
+        <h2>E-mail:  contato@tvmais.org</h2>
+        <h2>Fone: (85) 3023-2327</h2>
+      </ion-card-content>
+
+    </ion-card>
+
+    <div class="align-center" padding>
+
+      <h2 padding>Redes Sociais</h2>
+
+      <button color="facebook" ion-button icon-only large outline round>
+        <ion-icon name="logo-facebook"></ion-icon>
+      </button>
+
+      <button color="instagram" ion-button icon-only large outline round>
+        <ion-icon name="logo-instagram"></ion-icon>
+      </button>
+
+      <button color="youtube" ion-button icon-only large outline round>
+        <ion-icon name="logo-youtube"></ion-icon>
+      </button>
+
+      <button color="twitter" ion-button icon-only large outline round>
+        <ion-icon name="logo-twitter"></ion-icon>
+      </button>
+      
+    </div>
+
+    <br/>
+
+    <div class="align-center" padding>
+
+    <h5>Fale com o Desenvolvedor</h5>
+
+    <p>Para reportar erros, dúvidas ou sugestões de melhorias, favor enviar um e-mail com os detalhes do erro/sugestão para: suporte@devinside.com.br</p>
+    <img src="assets/imgs/devinside.png" alt="">
+    <p>&copy; Todos os direitos reservados</p>
+    <p>devinside.com.br</p>
+    
+    </div>
+
+  </div>
+
+</ion-content>
