--- a/src/pages/programas/programas.html
+++ b/src/pages/programas/programas.html
@@ -1,14 +1,31 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      Programas
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-<ion-content padding id="page3" style="background-color:#000000;">
-  <img src="assets/imgs/9K1qfI3SBCEyF3TnJLPA_Prog1-NossaConversa2016_10_0911_52_39UTC.jpg" style="display:block;width:70%;height:auto;margin-left:auto;margin-right:auto;" />
-  <img src="assets/imgs/UNN3ssGeSVyLJrcd4V57_Prog2-Ahoradaverdade2016_10_0911_52_39UTC.jpg" style="display:block;width:70%;height:auto;margin-left:auto;margin-right:auto;" />
+<ion-header class="header-background">
+    <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>
+          Programas
+      </ion-title>
+    </ion-navbar>
+  </ion-header>
+
+<ion-content>
+
+  <ion-card *ngFor="let programa of programas">
+
+    <img src="{{ programa.imagem }}"/>
+
+    <ion-card-content>
+      <ion-card-title>
+        {{ programa.title.rendered }}
+      </ion-card-title>
+      <h2>
+        {{ programa.apresentador }}
+      </h2>
+      <h2>
+        <ion-icon name="clock"></ion-icon> {{ programa.dia }} | {{ programa.horario }} 
+        </h2>
+    </ion-card-content>
+
+    </ion-card>
 </ion-content>
