Últimas alterações no design das páginas, inserção da prog no ao vivo

--- a/src/pages/contato/contato.html
+++ b/src/pages/contato/contato.html
@@ -33,19 +33,19 @@
 
       <h2 padding>Redes Sociais</h2>
 
-      <button color="facebook" ion-button icon-only large outline round>
+      <button color="facebook" ion-button icon-only outline round>
         <ion-icon name="logo-facebook"></ion-icon>
       </button>
 
-      <button color="instagram" ion-button icon-only large outline round>
+      <button color="instagram" ion-button icon-only outline round>
         <ion-icon name="logo-instagram"></ion-icon>
       </button>
 
-      <button color="youtube" ion-button icon-only large outline round>
+      <button color="youtube" ion-button icon-only outline round>
         <ion-icon name="logo-youtube"></ion-icon>
       </button>
 
-      <button color="twitter" ion-button icon-only large outline round>
+      <button color="twitter" ion-button icon-only outline round>
         <ion-icon name="logo-twitter"></ion-icon>
       </button>
       
