--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -45,7 +45,7 @@
     
     </div>
     <div padding>
-        <button ion-button color="light" class="center" outline round>Programação completa</button>
+        <button ion-button color="light" class="center" outline round (click)="GoToProgramacaoPage()">Programação completa</button>
     </div>
     
   </div>
