--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <ion-card>
-    <ion-card-content>
+    <ion-card-content class="card-sobre-bg">
       <ion-card-title>A TV Mais</ion-card-title>
       <p>
         Informação, entretenimento e serviço é o que orienta a programação da TV Mais voltando-se para critérios de audiência diferentes das TVs e rádios comerciais. Seu primeiro compromisso é a qualidade de programação.
@@ -26,7 +26,7 @@
     </ion-card-content>
   </ion-card>
   <ion-card>
-    <ion-card-content>
+    <ion-card-content class="card-sobre-bg">
       <ion-card-title>Nossa Missão</ion-card-title> 
       <p>
         Promover a integração social através da comunicação, desenvolvendo uma programação voltada à informar, entreter e prestar serviços à diversos grupos da sociedade.
@@ -34,7 +34,7 @@
     </ion-card-content>
   </ion-card>
   <ion-card>
-    <ion-card-content>
+    <ion-card-content class="card-sobre-bg">
       <ion-card-title>Objetivos</ion-card-title>
       <p>
         Desenvolver e articular práticas de Educomunicação, utilizando toda forma de veiculação midiática; Incentivar atividades de televisão em equipamentos públicos e privados; Capacitar, em atividade de Educomunicação, em organizações não governamentais, empresas
