--- a/src/pages/programacao/programacao.html
+++ b/src/pages/programacao/programacao.html
@@ -40,50 +40,43 @@
     
     <ion-list *ngSwitchCase="'0'">
       <ion-item *ngFor="let domingo of programacao_dom">
-        <h2> {{ domingo.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ domingo.horainicio }} - {{ domingo.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon> {{ domingo.horainicio }}  &nbsp;&nbsp;&nbsp;  {{ domingo.title.rendered }}</h2>
       </ion-item>
     </ion-list>
       
     <ion-list *ngSwitchCase="'1'" >
       <ion-item *ngFor="let segunda of programacao_seg">
-        <h2>{{ segunda.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ segunda.horainicio }} - {{ segunda.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon>  {{ segunda.horainicio }} &nbsp;&nbsp;&nbsp; {{ segunda.title.rendered }}</h2>
       </ion-item>
     </ion-list>
 
     <ion-list *ngSwitchCase="'2'">
       <ion-item *ngFor="let terca of programacao_ter">
-        <h2>{{ terca.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ terca.horainicio }} - {{ terca.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon>  {{ terca.horainicio }} &nbsp;&nbsp;&nbsp; {{ terca.title.rendered }}</h2>
       </ion-item>
     </ion-list>
 
     <ion-list *ngSwitchCase="'3'">
       <ion-item *ngFor="let quarta of programacao_qua">
-        <h2>{{ quarta.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ quarta.horainicio }} - {{ quarta.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon>  {{ quarta.horainicio }} &nbsp;&nbsp;&nbsp; {{ quarta.title.rendered }}</h2>
       </ion-item>
     </ion-list>
 
     <ion-list *ngSwitchCase="'4'">
       <ion-item *ngFor="let quinta of programacao_qui">
-        <h2>{{ quinta.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ quinta.horainicio }} - {{ quinta.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon>  {{ quinta.horainicio }} &nbsp;&nbsp;&nbsp; {{ quinta.title.rendered }}</h2>
       </ion-item>
     </ion-list>
 
     <ion-list *ngSwitchCase="'5'">
       <ion-item *ngFor="let sexta of programacao_sex">
-        <h2>{{ sexta.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ sexta.horainicio }} - {{ sexta.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon>  {{ sexta.horainicio }} &nbsp;&nbsp;&nbsp; {{ sexta.title.rendered }}</h2>
       </ion-item>
     </ion-list>
 
     <ion-list *ngSwitchCase="'6'">
       <ion-item *ngFor="let sabado of programacao_sab">
-        <h2>{{ sabado.title.rendered }}</h2>
-        <h3><ion-icon name="clock"></ion-icon>  {{ sabado.horainicio }} - {{ sabado.horatermino }}</h3>
+        <h2><ion-icon name="clock"></ion-icon>  {{ sabado.horainicio }} &nbsp;&nbsp;&nbsp; {{ sabado.title.rendered }}</h2>
       </ion-item>
     </ion-list>
 
