últimos ajustes e alterações no design.

--- a/src/pages/ao-vivo/ao-vivo.html
+++ b/src/pages/ao-vivo/ao-vivo.html
@@ -4,7 +4,7 @@
         <ion-icon name="menu"></ion-icon>
       </button>
       <ion-title>
-          Ao vivo
+          AO VIVO
       </ion-title>
     </ion-navbar>
   </ion-header>
@@ -20,7 +20,7 @@
   </div>
 
   <div id="content" padding>
-    <h4>Programação de hoje</h4>
+    <h4>PROGRAMAÇÃO DE HOJE</h4>
       <div [ngSwitch]="programacao_segment" >
     
         <ion-list *ngSwitchCase="'0'">
