--- a/src/pages/contato/contato.html
+++ b/src/pages/contato/contato.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Contato
+      CONTATO
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -31,7 +31,7 @@
 
     <div class="align-center" padding>
 
-      <h2 padding>Redes Sociais</h2>
+      <h2 padding>REDES SOCIAIS</h2>
 
       <button color="facebook" ion-button icon-only outline round>
         <ion-icon name="logo-facebook"></ion-icon>
@@ -55,7 +55,7 @@
 
     <div class="align-center" padding>
 
-    <h5>Fale com o Desenvolvedor</h5>
+    <h5>AJUDE-NOS A MELHORAR</h5>
 
     <p>Para reportar erros, dúvidas ou sugestões de melhorias, favor enviar um e-mail com os detalhes do erro/sugestão para: suporte@devinside.com.br</p>
     <img src="assets/imgs/devinside.png" alt="">
