--- a/src/pages/programacao/programacao.html
+++ b/src/pages/programacao/programacao.html
@@ -4,7 +4,7 @@
         <ion-icon name="menu"></ion-icon>
       </button>
       <ion-title>
-          Programação
+          PROGRAMAÇÃO
       </ion-title>
     </ion-navbar>
 
