--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -4,7 +4,7 @@
         <ion-icon name="menu"></ion-icon>
       </button>
       <ion-title>
-          Sobre
+          SOBRE A TV MAIS
       </ion-title>
     </ion-navbar>
   </ion-header>
